styles.css
@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");

body {
  padding: 24px;
  font-family: 'Poppins', sans-serif;
  background-color: #e5e5e5;
  display: flex;
  margin: 0;
  flex-direction: column;
}

.project-section {
  display: grid;
  grid-template-columns: 1fr;
}

.header {
  display: flex;
  margin-top: 10px;
  margin-bottom: 1px;
  justify-content: space-between;
}

.logo {
  font-size: 18px;
}

.hamb {
  display: flex;
  justify-content: flex-end;
  flex: 1;
}

.hamb img {
  max-height: 30px;
}

.welcome-text {
  line-height: 52px;
  font-size: 40px;
  font-weight: bolder;
  align-items: center;
}

.intro h3 {
  font-size: 40px;
  line-height: 52px;
  font-weight: bold;
}

.welcome-section {
  background-image: url(img/header-shapes\ mobile@2x.png);
  background-size: cover;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding-top: 90px;
  margin-bottom: 200px;
}

.social-media {
  display: flex !important;
  align-content: flex-start;
  padding-left: 1px;
  list-style: none;
  padding-top: 1px;
  margin: 1px;
  justify-content: space-between;
  width: 200px;
}

.social-media img {
  max-height: 30px;
}

.connect {
  padding-top: 1px;
  padding-bottom: 10px;
  margin-bottom: 1px;
  color: #7f8cff;
  font-size: 16px;
  font-weight: 500;
}

.card-section {
  display: flex;
  flex-direction: column;
  padding: 16px;
  margin-bottom: 90px;
  border-radius: 20px;
}

.card-image img {
  padding: 1px;
  width: 355px;
}

.card-header {
  font-weight: 700;
  font-size: 34px;
  line-height: 44px;
  margin-bottom: 1px;
  margin-top: 15px;
}

.card-links {
  display: inline-flex;
  padding: 1px;
  margin-bottom: 20px;
}

.card-links li {
  padding-left: 9px;
  list-style: none;
  font-size: 13px;
  line-height: 16px;
  font-weight: 600;
  color: rgba(122, 134, 154, 1);
}

.card-text {
  font-weight: 400;
  font-size: 15px;
  line-height: 24px;
  max-width: 80vw;
}

.card-lang {
  padding: 1px;
  justify-content: space-between;
  max-width: 100vw;
  margin-top: 10px;
  margin-bottom: 77px;
}

.card-lang li {
  float: left;
  margin: 15px;
  padding: 9px;
  list-style: none;
  font-size: 12px;
  line-height: 16px;
  border-radius: 10px;
  background-color: rgba(235, 235, 255, 1);
  color: rgba(96, 112, 255, 1);
}

.btn1 {
  width: 30vw;
  color: rgba(57, 109, 242, 1);
  border-radius: 7px;
  line-height: 50px;
  background-color: white;
  font-size: 17px;
  border: 1px solid;
}

.btn1:hover {
  text-decoration-line: underline;
}

.btn2 {
  width: 40vw;
  margin-bottom: 60px;
  margin-top: 34px;
}

.btn3 {
  width: 140px;
  height: 48px;
  padding: 12px 16px;
  align-items: center;
  color: rgba(96, 112, 255, 1);
  font-size: 17px;
}

.btn3:hover {
  text-decoration-line: underline;
}

.about-me {
  padding: 24px;
  display: flex;
  flex-direction: column;
  padding-top: 20px;
}

.about-header {
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
  margin-top: 114px;
}

.about-para {
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
}

.langua {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  margin-left: 1px;
}

.lang-item {
  display: flex;
  background-color: rgba(247, 247, 249, 1);
  margin: 10px;
  border-radius: 8px;
}

.lang-item p {
  font-size: 15px;
  align-self: center;
  padding-top: 14px;
  margin-left: 14px;
  font-weight: 500;
}

.item-header {
  font-size: 20px;
  font-weight: 500;
  line-height: 24px;
}

.contact {
  background-image: url(img/header-shapes\ mobile@2x.png);
  background-repeat: no-repeat;
  background-size: cover;
  background-color: #6070ff;
  transform: matrix(1, 0, 0, 1, 0, 0);
  padding: 24px;
  display: flex;
  flex-direction: column;
}

.contact-form {
  display: flex;
  flex-direction: column;
}

.contact-header {
  margin-top: 100px;
  justify-content: center;
  font-size: 40px;
  align-self: center;
  line-height: 52px;
  font-weight: 700;
  color: ghostwhite;
}

.contact-text {
  font-weight: 400;
  font-size: 20px;
  line-height: 28px;
  align-self: center;
  margin-bottom: 40px;
  color: rgba(235, 235, 255, 1);
}

.contact-input {
  margin-bottom: 10px;
  padding: 10px;
}

.lang-arrow {
  display: flex;
}

.la {
  position: relative;
  left: 130px;
  margin-top: 15px;
}

.tools {
  list-style: none;
  padding-left: 1px;
  margin-left: 1px;
}

@media only screen and (min-width: 760px) {

  body {
    padding: 1px;
    margin: 1px;
  }
  
  .first-page {
    background: #fff;
    border: 2px solid whitesmoke;
    border-radius: 1px 1px 1px 50px;
    width: 1440px;
  }

  .header {
    display: flex;
  }

  .link-items {
    display: flex;
    list-style: none;
    width: 259px;
    height: 40px;
    margin-right: 140px;
  }

  .hamburger {
    display: none;
   }

  .link-items li {
    padding-left: 32px;
  }
  
  .logo {
    padding-left: 155px;
    color: rgba(96, 112, 255, 1);
    width: 76px;
    height: 20px;
    font-weight: bold;
    font-size: 18px;
    line-height: 20px;
  }
  
  .welcome-section {
    background-image: url(img/Header\ bg.png);
    background-size: cover;
    background-repeat: no-repeat;
  }
  
  .intro {
    margin-top: 100px;
    padding-left: 260px;
    padding-right: 260px;
  }
  
  .soshari {
    padding-left: 260px;
  }
  
  .card-section {
    display: grid;
    grid-template-columns: minmax(0,1fr) minmax(0, 1fr); 
    grid-gap: 1px;
    margin: 142px;
    width: 1156px;
    height: 496px;
    justify-content: space-between;
    background-color: white;
  }
  
  .card-para {
    margin-left: 10px;
    padding: 18px;
  }
  
  .card-image {
    margin: 10px;
  }
  
  .card-image img {
    width: 544px;
    height: 488px;
  }
  
  .img-card {
    width: 544px;
    height: 488px;  
  }
  
  .btn1 {
    width: 120px;
  }
  
  .se {
    order: 1;
  }
  
  .about-me {
    display: grid;
    grid-template-columns: minmax(0,1fr) minmax(0,1fr);
    background-color: white;
    border-radius: 0 60px 0 0;
    width: 1440px;
    max-height: 916px;
  }
  
  .btnp {
    width: 160px;  
  }
  
  .about-first {
    margin-left: 142px;
    padding-right: 10px;
  }
  
  .la {
    position: relative;
    left: 418px;
    margin-top: 15px;
  }
  
  .zi {
    left: 490px;
  }
  
  .langua {
    width: 60vw;
    display: grid;
    grid-template-columns: minmax(0,1fr)1fr 1fr 1fr;
    margin: 0px;
  }
  
  .lang-item {
    display: flex;
    flex-direction: column;
    width: 122px;
    height: 120px;
    padding: 10px;
  }
  
  .contact {
    display: flex;
    flex-direction: column;
    justify-content: center;
    max-width: 1440px;
    border-radius: 90px 0px 0px 0px;
    height: 846px;
  }
  
  .contact-header {
    flex: 1;
    padding-left: 400px;
    padding-right: 400px;
    font-weight: 700;
    font-size: 40px;
    line-height: 52px;
    justify-content: center;
  }
  
  .contact-text {
    padding-right: 400px;
    padding-left: 400px;
  }
  
  .contact-form {
    justify-content: center;
    padding-left: 400px;
    padding-right: 400px;
  }
  
  .rty{
    margin-left: 170px;
  }
  
  .contact-input {
    margin-bottom: 17px;
  }
}

